# ingestor-reader-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
configs/: datasets.yml  quality.yml
src/radar_data/: __init__.py
src/radar_data/application/: __init__.py
src/radar_data/application/use_cases/: __init__.py  fetch_use_case.py  normalize_use_case.py  parse_use_case.py  quality_use_case.py  write_use_case.py
src/radar_data/domain/: __init__.py  entities.py  errors.py  interfaces.py
src/radar_data/infrastructure/: __init__.py
src/radar_data/infrastructure/config/: __init__.py  loader.py  schema.py
src/radar_data/infrastructure/io/: __init__.py  csv_sink.py  filesystem.py  parquet_sink.py
src/radar_data/infrastructure/net/: __init__.py  discovery.py  http_fetcher.py
src/radar_data/infrastructure/normalize/: __init__.py  mapping.py  time_units.py  units.py
src/radar_data/infrastructure/parse/: __init__.py  csv_reader.py  excel_reader.py
src/radar_data/infrastructure/parse/plugins/: __init__.py  example_bcra_reservas.py  example_indec_ipc.py
src/radar_data/infrastructure/quality/: __init__.py  checks.py  report.py
src/radar_data/interface/: __init__.py
src/radar_data/interface/cli/: __init__.py  runner.py
tests/: __init__.py  test_smoke_repo.py
tests/application/: test_use_cases.py
tests/domain/: test_entities.py
tests/infrastructure/: test_config_loader.py
